done why section

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                         2000 years old.</p>
                 </div>
 
-                <div class="flex justify-center">
+                <div class="flex justify-center mb-10">
                     <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
                         <div class="flex flex-col">
                             <span class="countdown font-mono text-3xl md:text-5xl lg:text-5xl">
@@ -422,7 +422,6 @@
                 <button class="btn bg-color w-36 h-16 text-white">Shop All</button>
             </div>
         </section>
-
         <!-- Team Section Start Here  -->
         <section class="container mx-auto mt-10">
             <div class="hero min-h-screen" style="background-image: url('images/team.png');">
@@ -492,6 +491,112 @@
             </div>
         </section>
         <!-- Team Section Start Here  -->
+        <!-- Choose Section Start Here  -->
+        <section class="container mx-auto mt-10 p-2">
+            <h2 class="text-center text-5xl mb-6 text-[#121212] font-extrabold">Why Choose Us</h2>
+            <p class="text-center text-[#12121299] text-sm mb-10">Contrary to popular belief, is not simply random text.
+                It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+
+
+            <div class="flex flex-col md:flex-col lg:flex-row justify-evenly">
+                <div class="flex flex-col-reverse md:flex-col lg:flex-row gap-16">
+                    <div>
+                        <!-- Card 1  -->
+                        <div
+                            class="flex flex-col md:flex-col lg:flex-row justify-center md:justify-start lg:justify-start mb-12 items-center">
+                            <div
+                                class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
+                                <i class="fa-solid fa-people-group text-lg"></i>
+                            </div>
+                            <div class="flex flex-col justify-center lg:justify-start text-center lg:text-left">
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                                <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5">
+                                <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees
+                                    are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                        <!-- Card 2  -->
+                        <div
+                            class="flex flex-col md:flex-col lg:flex-row justify-center md:justify-start lg:justify-start mb-12 items-center">
+                            <div
+                                class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
+                                <i class="fa-solid fa-people-group text-lg"></i>
+                            </div>
+                            <div class="flex flex-col justify-center lg:justify-start text-center lg:text-left">
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                                <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5">
+                                <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees
+                                    are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                        <!-- Card 3  -->
+                        <div
+                            class="flex flex-col md:flex-col lg:flex-row justify-center md:justify-start lg:justify-start mb-12 items-center">
+                            <div
+                                class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
+                                <i class="fa-solid fa-people-group text-lg"></i>
+                            </div>
+                            <div class="flex flex-col justify-center lg:justify-start text-center lg:text-left">
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                                <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5">
+                                <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees
+                                    are there for you to pick the most amazing and fresh fruits.</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="mb-10">
+                        <img class="md:w-[464px] lg:w-[464px] md:mx-auto" src="images/whychoose1.png" alt="">
+                    </div>
+                </div>
+                <!-- ------------Reft Card--------------  -->
+                <div>
+                    <!-- Card 1  -->
+                    <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-end mb-12 items-center">
+                        <div
+                            class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
+                            <i class="fa-solid fa-people-group text-lg"></i>
+                        </div>
+                        <div class="flex flex-col justify-center lg:justify-start text-center lg:text-right">
+                            <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            <hr class="w-40 mx-auto lg:mx-0
+                            lg:ml-48 text-[#121212CD] border-solid border-2 my-5">
+                            <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees are
+                                there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <!-- Card 2  -->
+                    <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-end mb-12 items-center">
+                        <div
+                            class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
+                            <i class="fa-solid fa-people-group text-lg"></i>
+                        </div>
+                        <div class="flex flex-col justify-center lg:justify-start text-center lg:text-right">
+                            <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5 lg:ml-48">
+                            <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees are
+                                there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+                    <!-- Card 3  -->
+                    <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-end mb-12 items-center">
+                        <div
+                            class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
+                            <i class="fa-solid fa-people-group text-lg"></i>
+                        </div>
+                        <div class="flex flex-col justify-center lg:justify-start text-center lg:text-right">
+                            <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5 lg:ml-48">
+                            <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees are
+                                there for you to pick the most amazing and fresh fruits.</p>
+                        </div>
+                    </div>
+
+                </div>
+        </section>
+        <!-- Choose Section Ends Here  -->
     </main>
     <!-- Main Section Ends Here  -->
     <!-- footer Section Start Here  -->
