complate footer section

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 </div>
             </div>
             <!-- Card Section  -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 px-2">
                 <!-- Card 1  -->
                 <div class="card w-full md:w-full bg-base-100 border border-[#12121226] px-2 py-12">
                     <figure><img src="images/fruit6.png" alt="Fruit" /></figure>
@@ -600,8 +600,31 @@
     </main>
     <!-- Main Section Ends Here  -->
     <!-- footer Section Start Here  -->
-    <footer>
-
+    <footer class="footer footer-center p-10 bg-[#121212] text-primary-content">
+        <div>
+            <div class="flex items-center gap-4 mb-8">
+                <img src="images/logo.png" alt="">
+                <h2 class="text-4xl text-white font-bold">Fruit Burst</h2>
+            </div>
+            <div class="flex flex-wrap gap-5 md:gap-10 text-[#FFF] text-sm mx-auto">
+                <a class="w-[50px] mx-auto" href="#">Home</a>
+                <a class="w-[60px] mx-auto" href="#">About Us</a>
+                <a class="w-[50px] mx-auto" href="#">Shop</a>
+                <a class="w-[60px] mx-auto" href="#">All Fruits</a>
+                <a class="w-[50px] mx-auto" href="#">Support</a>
+                <a class="w-[75px] mx-auto" href="#">My Account</a>
+            </div>
+        </div>
+        <div>
+            <div class="grid grid-flow-col gap-6 mb-8">
+                <a href="#"><i class="fa-brands fa-facebook text-4xl text-white"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube text-4xl text-white"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter text-4xl text-white"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin-in text-4xl text-white"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram text-4xl text-white"></i></a>
+                <a href="#"><i class="fa-brands fa-apple text-4xl text-white"></i></a>
+            </div>
+        </div>
     </footer>
     <!-- footer Section Ends Here  -->
 </body>
