some text modifide

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         </div>
                         <div class="card-actions justify-center">
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="underline text-color text-lg font-bold"
+                            <button class="text-color text-lg font-bold"
                                 onclick="my_modal_5.showModal()">Details</button>
                             <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
@@ -296,7 +296,7 @@
                         </div>
                         <div class="card-actions justify-center">
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="underline text-color text-lg font-bold"
+                            <button class="text-color text-lg font-bold"
                                 onclick="my_modal_6.showModal()">Details</button>
                             <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
@@ -341,7 +341,7 @@
                         </div>
                         <div class="card-actions justify-center">
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="underline text-color text-lg font-bold"
+                            <button class="text-color text-lg font-bold"
                                 onclick="my_modal_7.showModal()">Details</button>
                             <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
@@ -386,7 +386,7 @@
                         </div>
                         <div class="card-actions justify-center">
                             <!-- Open the modal using ID.showModal() method -->
-                            <button class="underline text-color text-lg font-bold"
+                            <button class="text-color text-lg font-bold"
                                 onclick="my_modal_8.showModal()">Details</button>
                             <dialog id="my_modal_8" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
@@ -433,7 +433,7 @@
                             text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
                             years old.</p>
                     </div>
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 md:gap-20 lg:gap-28">
                         <!-- Card 1  -->
                         <div class="card w-52 mx-auto mb-6 bg-transparent">
                             <figure><img class="mb-8 rounded-full" src="images/member1.png" alt="member" /></figure>
@@ -521,10 +521,10 @@
                             class="flex flex-col md:flex-col lg:flex-row justify-center md:justify-start lg:justify-start mb-12 items-center">
                             <div
                                 class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
-                                <i class="fa-solid fa-people-group text-lg"></i>
+                                <i class="fa-solid fa-heart-crack text-lg"></i>
                             </div>
                             <div class="flex flex-col justify-center lg:justify-start text-center lg:text-left">
-                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Fresh is Best</h3>
                                 <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5">
                                 <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees
                                     are there for you to pick the most amazing and fresh fruits.</p>
@@ -536,10 +536,10 @@
                             class="flex flex-col md:flex-col lg:flex-row justify-center md:justify-start lg:justify-start mb-12 items-center">
                             <div
                                 class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
-                                <i class="fa-solid fa-people-group text-lg"></i>
+                                <i class="fa-solid fa-gift text-lg"></i>
                             </div>
                             <div class="flex flex-col justify-center lg:justify-start text-center lg:text-left">
-                                <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                                <h3 class="text-[#121212] text-2xl font-extrabold">Gift Certificates</h3>
                                 <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5">
                                 <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees
                                     are there for you to pick the most amazing and fresh fruits.</p>
@@ -557,10 +557,10 @@
                     <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-end mb-12 items-center">
                         <div
                             class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
-                            <i class="fa-solid fa-people-group text-lg"></i>
+                            <i class="fa-solid fa-apple-whole tetx-lg"></i>
                         </div>
                         <div class="flex flex-col justify-center lg:justify-start text-center lg:text-right">
-                            <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            <h3 class="text-[#121212] text-2xl font-extrabold">Integrated Supplier</h3>
                             <hr class="w-40 mx-auto lg:mx-0
                             lg:ml-48 text-[#121212CD] border-solid border-2 my-5">
                             <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees are
@@ -571,10 +571,10 @@
                     <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-end mb-12 items-center">
                         <div
                             class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
-                            <i class="fa-solid fa-people-group text-lg"></i>
+                            <i class="fa-solid fa-ice-cream text-lg"></i>
                         </div>
                         <div class="flex flex-col justify-center lg:justify-start text-center lg:text-right">
-                            <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            <h3 class="text-[#121212] text-2xl font-extrabold">Sustainable Practice</h3>
                             <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5 lg:ml-48">
                             <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees are
                                 there for you to pick the most amazing and fresh fruits.</p>
@@ -584,10 +584,10 @@
                     <div class="flex flex-col lg:flex-row-reverse justify-center lg:justify-end mb-12 items-center">
                         <div
                             class="bg-[#E7E7E7] rounded-full w-16 h-16 mx-auto md:mx-1 lg:mx-2 flex justify-center items-center">
-                            <i class="fa-solid fa-people-group text-lg"></i>
+                            <i class="fa-solid fa-thumbs-up text-lg"></i>
                         </div>
                         <div class="flex flex-col justify-center lg:justify-start text-center lg:text-right">
-                            <h3 class="text-[#121212] text-2xl font-extrabold">Dedicated Team</h3>
+                            <h3 class="text-[#121212] text-2xl font-extrabold">The Benefits Only</h3>
                             <hr class="w-40 mx-auto lg:mx-0 text-[#121212CD] border-solid border-2 my-5 lg:ml-48">
                             <p class="text-[#12121299] text-base  md:w-[300px] lg:w-[354px]">Professional employees are
                                 there for you to pick the most amazing and fresh fruits.</p>
