--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
     <!-- Tailwind css and DaisyUi Link  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -48,7 +49,7 @@
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">All Fruits</a></li>
             </ul>
-            <div class="flex items-center gap-4 pl-5">
+            <div class="flex items-center gap-4 pl-5 cursor-pointer">
                 <img src="images/logo.png" alt="">
                 <h2 class="text-3xl md:text-4xl text-black md:text-white font-bold">Fruit Burst</h2>
             </div>
@@ -548,7 +549,8 @@
 
                     </div>
                     <div class="mb-10">
-                        <img class="md:w-[464px] lg:w-[464px] md:mx-auto" src="images/whychoose1.png" alt="">
+                        <img class=" w-full md:w-[464px] md:h-full lg:w-[464px] lg:h-full mx-auto md:mx-auto"
+                            src="images/whychoose1.png" alt="">
                     </div>
                 </div>
                 <!-- ------------Reft Card--------------  -->
