--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <h3 class="text-xl">Strawberry</h3>
             </div>
             <div class="text-center">
-                <img src="images/fruit4.png" alt="">
-                <h3 class="text-xl">Mango</h3>
+                <img src="images/fruit5.png" alt="">
+                <h3 class="text-xl">Pomegranate</h3>
             </div>
         </div>
         <!-- Fruits Section Ends Here  -->
