--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </head>
 
 <body class="font-family-lato">
+
     <!-- Header Section Start Here  -->
     <header class="container mx-auto mt-2 md:mt-10">
         <nav
@@ -192,8 +193,11 @@
 
     </header>
     <!-- Header Section Ends Here  -->
+
     <!-- Main Section Start Here  -->
     <main class="container mx-auto">
+
+        <!-- Card Section Start Here  -->
         <section class="container mx-auto mt-10">
             <div class="flex flex-col md:flex-row justify-between px-3 md:gap-10 lg:gap-46">
                 <div class="text-center md:text-left lg:text-left space-y-5 mb-5">
@@ -302,7 +306,7 @@
                             <dialog id="my_modal_6" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
                                     <img class="mx-28 md:mx-40 lg:mx-40" src="images/fruit7.png" alt="">
-                                    <h3 class="font-bold text-4xl">Red Dragon</h3>
+                                    <h3 class="font-bold text-4xl">Orange</h3>
                                     <p class="py-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
                                     <div class="rating flex justify-center mb-8 mt-6">
@@ -347,7 +351,7 @@
                             <dialog id="my_modal_7" class="modal modal-bottom sm:modal-middle">
                                 <form method="dialog" class="modal-box space-y-5">
                                     <img class="mx-28 md:mx-40 lg:mx-40" src="images/fruit8.png" alt="">
-                                    <h3 class="font-bold text-4xl">Orange</h3>
+                                    <h3 class="font-bold text-4xl">Red Dragon</h3>
                                     <p class="py-4">Professional employees are there for you to pick the most amazing
                                         and fresh fruits.</p>
                                     <div class="rating flex justify-center mb-8 mt-6">
@@ -423,6 +427,8 @@
                 <button class="btn bg-color w-36 h-16 text-white">Shop All</button>
             </div>
         </section>
+        <!-- Card Section Ends Here  -->
+
         <!-- Team Section Start Here  -->
         <section class="container mx-auto mt-10">
             <div class="hero min-h-screen" style="background-image: url('images/team.png');">
@@ -492,6 +498,7 @@
             </div>
         </section>
         <!-- Team Section Start Here  -->
+
         <!-- Choose Section Start Here  -->
         <section class="container mx-auto mt-10 p-2">
             <h2 class="text-center text-5xl mb-6 text-[#121212] font-extrabold">Why Choose Us</h2>
@@ -599,8 +606,10 @@
                 </div>
         </section>
         <!-- Choose Section Ends Here  -->
+
     </main>
     <!-- Main Section Ends Here  -->
+
     <!-- footer Section Start Here  -->
     <footer class="footer footer-center p-10 bg-[#121212] text-primary-content">
         <div>
@@ -629,6 +638,7 @@
         </div>
     </footer>
     <!-- footer Section Ends Here  -->
+
 </body>
 
 </html>
